--- a/styles.css
+++ b/styles.css
@@ -15,9 +15,8 @@ body{
 }
 #logo{
     display: block;
-    margin-left: auto;
-    margin-right: auto;
     height:100px;
+    margin:20px auto 20px auto;
 }
 #footerRow{
     background-color:#000f3a;
@@ -27,6 +26,7 @@ body{
     font-family: 'Parisienne', cursive;
     font-size:80px;
     text-align:center;
+    text-shadow: 3px 3px 6px #57000a;
 }
 #myName{
     font-family: 'Parisienne', cursive;
@@ -35,6 +35,7 @@ body{
     top: 60%;
     left: 50%;
     transform: translate(-50%, -50%);
+    text-shadow: 3px 3px 6px #000922;
 }
 #subtitle{
     font-family: 'Open Sans', sans-serif;
@@ -65,4 +66,18 @@ h6{
 }
 .courseImg{
     width:100px;
+}
+.modal{
+    color:#00144d;
+    font-family: 'Open Sans', sans-serif;
+}
+.modal button{
+    background-color: #00144d;
+    color:white;
+}
+.modalTrigger{
+    color:#00144d;
+    font-family: 'Open Sans', sans-serif;
+    float:right;
+    opacity: 0.95;
 }
